# DjangoTutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/polls/: forms.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_auto_20200703_2246.py  0003_question_is_approved.py
mysite/polls/templates/polls/: create.html  detail.html  index.html  results.html  vote.html
