[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["DhyeyLalseta <dhyeylalseta@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
